[gd_scene load_steps=5 format=3 uid="uid://ddrne6jwk3y3n"]

[ext_resource type="Texture2D" uid="uid://lasp6b28uybe" path="res://assets/sprites/structures/crafter/crafter.png" id="1_2pdxb"]
[ext_resource type="Script" path="res://scripts/structures/crafter.gd" id="1_5gqap"]
[ext_resource type="Texture2D" uid="uid://dyj7myh245l15" path="res://assets/sprites/cursors/destroy/destroy_cursor.png" id="2_krvc4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38wmk"]
size = Vector2(126, 126)

[node name="Crafter" type="Area2D" groups=["destroyable", "farms"]]
script = ExtResource("1_5gqap")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_38wmk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2pdxb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CrafterUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1928.0
offset_top = -612.0
offset_bottom = 204.0
grow_horizontal = 0
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/CrafterUI"]
layout_mode = 0
offset_left = -8.0
offset_top = -40.0
offset_right = 1928.0
offset_bottom = 832.0

[node name="Crafting" type="VBoxContainer" parent="CanvasLayer/CrafterUI/Panel"]
offset_top = 96.0
offset_right = 944.0
offset_bottom = 736.0

[node name="Label" type="Label" parent="CanvasLayer/CrafterUI/Panel/Crafting"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Crafter
"

[node name="RecipeContainer" type="VBoxContainer" parent="CanvasLayer/CrafterUI/Panel/Crafting"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/CrafterUI/Panel/Crafting"]
layout_mode = 2

[node name="Storage" type="VBoxContainer" parent="CanvasLayer/CrafterUI/Panel"]
layout_mode = 0
offset_left = 960.0
offset_top = 96.0
offset_right = 1928.0
offset_bottom = 736.0

[node name="Label" type="Label" parent="CanvasLayer/CrafterUI/Panel/Storage"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Storage
"

[node name="StorageContainer" type="VBoxContainer" parent="CanvasLayer/CrafterUI/Panel/Storage"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="CanvasLayer/CrafterUI/Panel"]
layout_mode = 0
offset_left = 1896.0
offset_right = 1936.0
offset_bottom = 40.0
icon = ExtResource("2_krvc4")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
